[package]
name = "futures-either"
description = "A way to await on the output of either of two futures"
version = "0.1.0"
homepage = "https://github.com/r3v2d0g/futures-either"
repository = "https://git.r3vd5u3d.network/~r3v2d0g/futures-either"
documentation = "https://docs.rs/futures-either"
keywords = ["async", "await", "future", "futures"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
license = "MPL-2.0"
authors = ["Matthieu Le brazidec (r3v2d0g) <r3v2d0g@jesus.gg>"]
edition = "2018"

[features]
default = ["fair"]
fair = ["fastrand"]

[dependencies]
either = "1.6"

[dependencies.fastrand]
version = "1.3"
optional = true

[dev-dependencies]
futures-lite = "1.0"
